[build-system]
requires = [
    "setuptools>=64",
    "setuptools-scm[toml]>=8",
    "xtrack==0.56.1",
    "xfields==0.15.0",
    "xcoll==0.3.5",
    "xobjects==0.3.1",
    "ipdb",
]
build-backend = "setuptools.build_meta"

[project]
name = "xsuite-kernels"
authors = [
    {name = "Szymon Åopaciuk", email = "szymon@lopaciuk.eu"}
]
description = "A package supplying binary kernels for Xsuite."
readme = "README.md"
# Test the theory that cibuildtools has a problem with Python 3.8 on ARM64
# as it installs the wrong binary for the platform.
# https://github.com/pypa/cibuildwheel/issues/1278
requires-python = ">=3.9"
license = {file = "LICENSE"}
dependencies = [
    "xtrack==0.56.1",
    "xfields==0.15.0",
    "xcoll==0.3.5",
    "xobjects==0.3.1",
]
dynamic = ["version"]

[project.scripts]
xsuite-kernels = "xsuite_kernels.cli:main"

[tool.setuptools_scm]
# empty for default configuration

# The very non-obvious way files can be included in either sdist or bdist with
# setuptools. We need to list the file in:
# - MANIFEST.in if we want it in both sdist and bdist,
# - package_data and exclude it from the manifest if we want it in bdist only,
# - exclude_package_data if we want it in sdist only,
# - nowhere if we don't want to package them.
# Thanks to this setup an sdist can be build without the binary files, and a
# bdist can be build including them following the standard PEP 517 procedure
# using the `build` command.
[tool.setuptools]
packages = ["xsuite_kernels"]
include-package-data = true

[tool.setuptools.package-data]
xsuite_kernels = [
    'lib/*.so',
    'lib/*.dylib',
    'lib/*.dll',
    'lib/*.json',
]

[tool.cibuildwheel]
before-all = [
    "uname -a",
    "arch",
    "cc --version",
    "file `which python` || true",
    "file `which cc` || true",
]
build-verbosity = 1
